2004-04-30  MenTaLguY <mental@rydia.net>

    * src/sp-use.cpp: call parent class' write methods rather than
	  attempting to do everything (wrongly) ourselves; among other
	  things, <use> transform attributes weren't getting written

2004-04-30 njh <njh@mail.csse.monash.edu.au>

	* main.cpp: replaced gtk_init with g_type_init for console mode.
	Closes 944969.
	
2004-04-29  MenTaLguY <mental@rydia.net>

	* src/sp-image.cpp, src/sp-item.cpp, src/sp-item.h, src/sp-line.cpp,
	  src/sp-path.cpp, src/sp-rect.cpp, src/sp-text.cpp:

	  write_transform becomes set_transform, which applies the given
	  transform to the object without (!) invoking a repr write

	* src/sp-star.cpp, src/svg/svg-length.h, src/svg/svg-length.cpp,
	  src/svg-types.h, src/svg/svg.h:

	  replaced raw integers with real units enum

	* src/libnr/nr-matrix.h:

	  removed dead assertion (it's always valid to retrieve the
	  translation component of a matrix)

    * src/selection-chemistry.cpp:

	  delete items via SPItem (SPObject), not repr

	* src/sp-object.h, src/sp-object.cpp:

	  added SPObject::deleteObject() and a delete notification signal;
	  SPObject now inherits from GObject in the C++ sense

    * src/sp-use.h:

	  don't accept references to the use or its ancestors (preventing
	  infinite loops)

	* src/sp-use.cpp, src/sp-use.h:

	  added automatic deletion when referrent is deleted

    * src/uri-reference.h:

	  added URIReference::getOwner()

2004-04-29  Carl Hetherington <inkscape@carlh.net>

	* src/extension/internal/win32.cpp: add textToPath parameter to
	description in order to fix #944131.

2004-04-28  Carl Hetherington <inkscape@carlh.net>

	* src/desktop.cpp, src/inkscape.cpp, src/sp-namedview.cpp
	Part of the fix for #942149.  Also fixed some compiler warnings.

	* src/display/nr-arena.cpp: Fixed an unused variable warning.

	* src/main.cpp: Fix a warning that is raised on Windows.

2004-04-28  bulia byak <bulia@users.sourceforge.net>
